<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".WeatherFragment">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/updated_field"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="10sp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/city_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/city_coord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/city_field"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-5sp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/updated_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/city_coord"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="-10sp"
                android:layout_marginTop="15sp"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/description_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/imageView"
                android:layout_marginRight="10sp"
                android:textAppearance="?android:attr/textAppearanceMediumInverse" />

            <TextView
                android:id="@+id/current_temperature_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/updated_field"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:textSize="90sp" />


            <TextView
                android:id="@+id/current_temperature_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/updated_field"
                android:layout_marginLeft="-10sp"
                android:layout_marginTop="10sp"
                android:layout_toRightOf="@+id/current_temperature_field"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:textSize="40sp" />


            <TextView
                android:id="@+id/minMax_temperature_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/current_temperature_field"
                android:layout_marginTop="-10sp"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:textSize="15sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/current_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="25sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/current_details"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_toRightOf="@+id/current_details"
                android:text="@string/arrow_down"
                android:textColor="@color/red"
                android:layout_marginLeft="5sp"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/details_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/current_details"
                android:layout_marginLeft="10sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <TextView
                android:id="@+id/details_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/details_field"
                android:layout_marginBottom="40sp"
                android:layout_marginLeft="10sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10sp"
                android:text="@string/open_weather"
                android:textSize="13sp"

                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#BDBDBD" />

            <TextView
                android:id="@+id/sunrise_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/view"
                android:layout_marginLeft="10sp"
                android:text="@string/sunrise_sunset"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sunrise_sunset"
                android:layout_marginLeft="70sp"
                android:layout_marginTop="20sp"
                android:text="@string/sunrise"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/sunrise_sunset"
                android:layout_marginRight="70sp"
                android:layout_marginTop="20sp"
                android:text="@string/sunset"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sunrise_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sunrise"
                android:layout_marginBottom="20sp"
                android:layout_marginLeft="50sp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sunset_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/sunset"
                android:layout_marginBottom="20sp"
                android:layout_marginRight="50sp"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>